# crypto-converter

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose-test.yaml  docker-compose.yaml  pylama.ini  pyproject.toml  run_tests
alembic/: env.py  env_async_monsoon.py  env_async_template.py
alembic/versions/: 052ab839d3a2_added_cascade_delete.py  2024_09_18_0530-9976474bc9c2_updated_cascade_delete.py  2024_09_18_0556-d6ce853a3a24_base_migration.py  2024_09_18_0800-6bdbbd0b89d2_removed_old_table.py  2024_09_18_1238-27c6f487c39f_added_aggregated_data_table.py  2024_09_18_1309-642ab3980717_base_migration.py  2024_09_18_1338-9b2d26cd4632_add_aggregation_trigger.py  2024_09_18_1338-9b2d26cd4632_new_migration.py  2024_09_19_0825-62c899830ae8_create_view_for_aggregated_prices.py  45c6d75120e0_your_message_here.py  686cf739d8a6_initial_migration.py  8fb410e84a41_added_new_ticker_and_ticker_data_tables.py  b0b460fb38ea_added_cascade_delete.py  b698fde8c932_added_index_for_ticker_name.py  fb2f203ae0e6_added_created_at_field.py
crypto_converter/: aio_binance_api.py  clickhouse_db.py  common.py  db.py  db_models.py  exception_handlers.py  exceptions.py  exchange_api.py  exchange_service.py  models.py  run.py  settings.py
crypto_converter/api/: app.py
crypto_converter/binance_consumer/: aio_binance_api.py
crypto_converter/common/: common.py  exception_handlers.py  models.py  settings.py
crypto_converter/database/: db.py  db_models.py
sql/: queries.sql
tests/: conftest.py  test_migrations.py  test_models.py
(+14 files in other folders)
